[package]
name = "ji-chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
serde_json = "1.0.79"
reqwest = "0.11.9"
slug = "0.1.4"
unicode_hfwidth = "0.2.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.10"
features = ["cache", "framework", "standard_framework", "rustls_backend"]