[package]
name = "ji-chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
reqwest = "0.11"
slug = "0.1"
unicode_hfwidth = "0.2"
fs_extra = "1.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
